# WorkStation

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.console/: backlog.md  guidelines.md  log.md  mission-log.md  objectives.md  task.md
.custodian/: config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
compose/: docker-compose.local-ai.yml  docker-compose.override.example.yml  docker-compose.yml
compose/profiles/: archon.yml  core.yml  dev.yml  observability.yml
config/observability/: README.md  prometheus.yml
config/observability/grafana/provisioning/datasources/: prometheus.yaml
config/plane/: .env.example
config/platformdeployment/: endpoints.yaml  local_lane.example.yaml
docker/: Dockerfile.switchboard
docs/: README.md  architecture.md
docs/architecture/adapters/: archon-real-workflow-integration.md  kodo-adapter.md  local-lane.md
docs/architecture/adr/: 0001-remove-9router.md
docs/architecture/contracts/: contracts.md
docs/architecture/execution/: execution-observability.md
docs/architecture/routing/: operations-center-routing.md
docs/architecture/system/: glossary.md  ownership.md  repo_responsibility_matrix.md  system_overview.md
docs/history/: final-phase-checklist-result.md  legacy-remediation-summary.md  workstation-9router-removal.md
docs/operations/: archon-setup.md  environments.md  health-model.md  local-lane-setup.md  local_aider_lane.md  port-map.md  runbook.md  service-map.md  startup-flow.md
docs/reference/: providers.md
docs/system/: roadmap.md
scripts/: backup-plane.sh  backup-secrets.sh  bootstrap.ps1  down.ps1  down.sh  ensure-up.sh  health.ps1  health.sh  logs.ps1  logs.sh  ollama-health.sh  ollama-up.sh  plane.sh  restart.ps1  restart.sh  restore-plane.sh  setup-secrets.sh  status.ps1  status.sh  up.ps1  up.sh  workers.sh
scripts/custodian/: run_with_boundary.sh
test/smoke/: test_stack_health.py
test/unit/: test_custodian_boundary_runner.py  test_endpoint_config.py  test_endpoint_map.py  test_lane_config.py  test_lane_manager.py  test_lane_models.py  test_legacy_runtime_removal.py  test_local_manifest_discovery.py  test_status_config.py
tools/platform_deployment_cli/: __init__.py  __main__.py  config.py  lane_cli.py  lane_config.py  lane_manager.py  lane_models.py  local_manifest.py  main.py  plane_cli.py  secrets_cli.py  services.py  status.py  workers_cli.py  workspace_cli.py
tools/workstation_cli/: __init__.py  config.py  health.py  lane_cli.py  lane_config.py  lane_manager.py  lane_models.py  local_manifest.py  main.py  services.py  status.py
