[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platformdeployment"
version = "0.1.0"
description = "PlatformDeployment — local deployment, hosting, and topography support for the shared AI coding stack."
requires-python = ">=3.11"

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Tool-side replacements for Custodian native detectors deprecated under the
# "use the tool first" principle. See Custodian docs/design/detector_disposition_matrix.md.
extend-select = [
    "T201",                                              # C2  — print()
    "S101",                                              # C40 — assert in prod
    "S110",                                              # C4  — try/except/pass
    "S324",                                              # C31 — weak hash
    "S602", "S603",                                      # C23 — subprocess shell=True
    "BLE001",                                            # C9  — blind Exception
    "DTZ001", "DTZ003", "DTZ005", "DTZ006", "DTZ007",   # C10 — naive datetime
    "G004",                                              # C15 — f-string in logger
    "B006",                                              # C38 — mutable default arg
    "B028",                                              # C42 — warnings.warn no stacklevel
    "PLC1802",                                           # C17 — len(x) == 0
    "TRY002",                                            # C20 — raise vanilla Exception
    "TRY203",                                            # D9  — useless try/except
    "PGH003",                                            # C35 — bare # type: ignore
    "RET503",                                            # D8  — implicit return
    "N818",                                              # N1  — exception class naming
]

[tool.ruff.lint.per-file-ignores]
# CLI tools intentionally:
#   - swallow exceptions to surface user-friendly errors (BLE001)
#   - use shell=True for operator-supplied stop_command (S602)
#   - try/except/pass on best-effort cleanup (S110)
#   - run user-supplied subprocesses (S603)
"tools/platform_deployment_cli/**" = ["BLE001", "S602", "S110", "S603"]
